syntax = "proto3";

import "google/protobuf/timestamp.proto";

package transmitter;

option go_package = "./transmitter";

service Transmitter {
    rpc Transmitter(TransmitterRequest) returns (stream TransmitterResponce) {}
}

message TransmitterRequest {
    string session_id = 1;
    int32 expectedValue = 2;
    double standartDiviation = 3;
}

message TransmitterResponce {
    string session_id = 1;
    double frequency = 2;
    google.protobuf.Timestamp timestamp = 3;
}
